--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,3 +7,7 @@
   -moz-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25);
 }
+
+.selected{
+  background-color: red;
+}
