--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap");
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -7138,11 +7139,47 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
+body {
+  font-family: 'Sulphur Point', sans-serif;
+  font-size: 24px; }
+
+.bg-gradient {
+  background: #22bee6;
+  background: linear-gradient(45deg, #22bee6 0%, #d521f0 100%); }
+
 .box {
+  background-color: #f2f2f2;
   padding: 24px;
   -webkit-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25); }
+  box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25);
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  border-radius: 16px; }
 
-.selected {
-  background-color: red; }
+button {
+  background-color: #69DED5;
+  color: white;
+  border: none;
+  margin: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.65);
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  border-radius: 16px; }
+
+input, textarea {
+  border: solid #191919 1px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  margin-right: 16px; }
+
+#brand-logo {
+  height: 32px;
+  width: 32px;
+  margin-right: 24px; }
+
+.summaryInput {
+  height: 100px; }
