--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,59 @@
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import url('https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap');
+
+$background: #f2f2f2;
+$secondary: #69DED5;
+$bg-blue:#22bee6;
+$bg-pink:#d521f0;
+
+body {
+  font-family: 'Sulphur Point', sans-serif;
+  font-size:24px;
+}
+
+.bg-gradient{
+  background: $bg-blue;
+  background: linear-gradient(45deg, $bg-blue 0%, $bg-pink 100%);
+}
 
 .box {
+  background-color: $background;
   padding: 24px;
-
   -webkit-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.25);
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  border-radius: 16px;
 }
 
-.selected{
-  background-color: red;
+button {
+  background-color: $secondary;
+  color: white;
+  border: none;
+  margin: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.65);
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  border-radius: 16px;
+}
+
+input, textarea {
+  border: solid #191919 1px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  margin-right: 16px;
+}
+
+#brand-logo {
+  height: 32px;
+  width: 32px;
+  margin-right: 24px;
+}
+
+.summaryInput{
+  height: 100px;
 }
