--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7185,12 +7185,15 @@ button:hover {
   border-radius: 16px;
   font-weight: bold; }
 
-input, textarea {
+input, textarea, select {
   border: solid #191919 1px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
   margin-right: 16px; }
+
+select {
+  width: 100px; }
 
 #brand-logo {
   height: 32px;
